--- a/multiinheritance.ipynb
+++ b/multiinheritance.ipynb
@@ -1,42 +1,27 @@
 {
-  "nbformat": 4,
-  "nbformat_minor": 0,
-  "metadata": {
-    "colab": {
-      "provenance": [],
-      "authorship_tag": "ABX9TyMKBkwq/tBci/xzrU4eVVPI",
-      "include_colab_link": true
-    },
-    "kernelspec": {
-      "name": "python3",
-      "display_name": "Python 3"
-    },
-    "language_info": {
-      "name": "python"
-    }
-  },
   "cells": [
     {
-      "cell_type": "markdown",
-      "metadata": {
-        "id": "view-in-github",
-        "colab_type": "text"
-      },
-      "source": [
-        "<a href=\"https://colab.research.google.com/github/yaojialuo/final_python/blob/main/multiinheritance.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
-      ]
-    },
-    {
       "cell_type": "code",
-      "source": [],
+      "execution_count": 1,
       "metadata": {
-        "id": "e8-oukdjJ1Z3"
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "Jue81poO4icX",
+        "outputId": "ec3f573d-570b-474a-e146-b61bdfee4f5b"
       },
-      "execution_count": null,
-      "outputs": []
-    },
-    {
-      "cell_type": "code",
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "init\n",
+            "<__main__.Mycls object at 0x7c221e743c10>\n",
+            "init\n",
+            "<__main__.Mycls object at 0x7c221e743c10>\n"
+          ]
+        }
+      ],
       "source": [
         "class Mycls:\n",
         "  _instance = None\n",
@@ -55,36 +40,33 @@
         "print(my1)\n",
         "my2=Mycls()\n",
         "print(my2)"
-      ],
-      "metadata": {
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "id": "Jue81poO4icX",
-        "outputId": "ec3f573d-570b-474a-e146-b61bdfee4f5b"
-      },
-      "execution_count": 1,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "init\n",
-            "<__main__.Mycls object at 0x7c221e743c10>\n",
-            "init\n",
-            "<__main__.Mycls object at 0x7c221e743c10>\n"
-          ]
-        }
       ]
     },
     {
       "cell_type": "code",
-      "source": [],
+      "execution_count": null,
       "metadata": {
         "id": "p6YHPnd64oXT"
       },
-      "execution_count": null,
-      "outputs": []
+      "outputs": [],
+      "source": []
     }
-  ]
+  ],
+  "metadata": {
+    "colab": {
+      "authorship_tag": "ABX9TyMKBkwq/tBci/xzrU4eVVPI",
+      "include_colab_link": true,
+      "provenance": []
+    },
+    "kernelspec": {
+      "display_name": "Python 3",
+      "name": "python3"
+    },
+    "language_info": {
+      "name": "python",
+      "version": "3.12.3"
+    }
+  },
+  "nbformat": 4,
+  "nbformat_minor": 0
 }
