--- a/multiinheritance.ipynb
+++ b/multiinheritance.ipynb
@@ -2,7 +2,7 @@
   "cells": [
     {
       "cell_type": "code",
-      "execution_count": 1,
+      "execution_count": 2,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -15,10 +15,12 @@
           "name": "stdout",
           "output_type": "stream",
           "text": [
+            "<class 'type'>\n",
             "init\n",
-            "<__main__.Mycls object at 0x7c221e743c10>\n",
+            "<__main__.Mycls object at 0x0000024C9E2D8470>\n",
+            "<class 'type'>\n",
             "init\n",
-            "<__main__.Mycls object at 0x7c221e743c10>\n"
+            "<__main__.Mycls object at 0x0000024C9E2D8470>\n"
           ]
         }
       ],
@@ -27,6 +29,7 @@
         "  _instance = None\n",
         "  def __new__(cls):\n",
         "        # 判断该类的属性是否为空；对第一个对象没有被创建，我们应该调用父类的方法，为第一个对象分配空间\n",
+        "        print(type(cls))\n",
         "        if cls._instance == None:\n",
         "        # 把类属性中保存的对象引用返回给python的解释器\n",
         "                cls._instance = object.__new__(cls)\n",
@@ -63,7 +66,15 @@
       "name": "python3"
     },
     "language_info": {
+      "codemirror_mode": {
+        "name": "ipython",
+        "version": 3
+      },
+      "file_extension": ".py",
+      "mimetype": "text/x-python",
       "name": "python",
+      "nbconvert_exporter": "python",
+      "pygments_lexer": "ipython3",
       "version": "3.12.3"
     }
   },
