--- a/importpkg.ipynb
+++ b/importpkg.ipynb
@@ -11,20 +11,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "__name__\n",
+      "my_package.my_module\n",
       "Hello, world!\n"
      ]
     }
    ],
    "source": [
     "my_package.hello()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "!python -m my_package"
    ]
   },
   {
